<resources>
    <string name="app_name">Prototype 0.2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="log_in">OLD requests</string>
    <string name="log_out">log_out</string>

    <string name="product_name">Cycle Defence</string>

    <string name="default_data">Nothing yet :(</string>
    <string name="refresh_txt">refresh</string>
    <string name="ip_address">loading</string>
    <string name="user_id">loading</string>
    <string name="DEV">IN DEVELOPMENT</string>
    <string name="showMap">Show map</string>
    <string name="map_fragment_label">Map</string>
    <string name="turnOn">On</string>
    <string name="turnOff">Off</string>
    <string name="btnSaveDataText">save</string>
    <string name="show_data">local DB</string>
</resources>